--- a/baconstyle.css
+++ b/baconstyle.css
@@ -1,63 +1,72 @@
-/*************SMALL SCREEN **************/
-@media only screen 
-and (min-device-width : 320px) 
-and (max-device-width : 480px) {
-/* Styles */
+html {
+	font-family: 'Roboto Slab', serif;
+}
 #wrapper {
-	width: 100%;
-	margin: 0;
-}
-#main-head {
-	margin-bottom: 0;
-	text-align: center;
-}
-#body{
-	width: 100%;
-}
-#nav {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
-	text-align: center;
+	max-width: 700px;
+	margin: auto;
+	margin-top: 20px;
+	background-color: white;
+	padding: 30px;
+	border-radius: 10px;
+
+	
 }
 
-#nav li {
-	display: block;
-	width: 100%;
-	padding: 2.5%;
-
+.main-content {
+	max-width: 550px;
+	margin: auto;
+	padding: 20px;
 }
+
 
 #header {
-	width: 100%;
-	margin: auto;
-}
-}
-
-/*************LARGE SCREEN **************/
-@media only screen 
-and (min-device-width : 768px) {
-
-#wrapper {
-	width: 60%;
-	margin: auto;
-}
-#main-head {
-	margin-bottom: 0;
 	text-align: center;
+	max-width: 600px;
+	height: 150pxm;
+	margin: auto;
+	padding: 0px 40px;
 }
 
 #nav {
-	list-style-type: none;
-	display: block;
-	margin: 0;
-	padding: 0;
+	background-color: #891520;
+	margin-top: 15px;
+	height: 55px;
 	text-align: center;
+	border-radius: 5px;
+	font-size: 1.25em;
+	padding: 0;
+}
+
+#home-link {
+	width: 200px;
+	float: left;
+	display: inline-block;
+	text-align: left;
 }
 
 #nav li {
-	display: inline;
-	padding: 2.5%;
+	display: inline-block;
+	width: 30%;
+	position: relative;
+  	top: 50%;
+  	transform: translateY(-50%);
+  	letter-spacing: 1.3;
+}
+
+ul li a {
+	text-decoration: none;
+	color: white;
 
 }
 
+
+
+a:hover {
+	color: white;
+	border-radius: 10px;
+
+}
+
+.div {
+	border: solid 2px black;
+}
